--- a/app/views/layouts/rails_admin/_head.html.haml
+++ b/app/views/layouts/rails_admin/_head.html.haml
@@ -1,6 +1,6 @@
 %meta{content: "IE=edge", "http-equiv" => "X-UA-Compatible"}
 %meta{content: "text/html; charset=utf-8", "http-equiv" => "Content-Type"}
-%meta{content: "width=device-width, initial-scale=1", name: "viewport; charset=utf-8"}
+%meta{name: "viewport", content: "width=device-width, initial-scale=1"}
 %meta{content: "NONE,NOARCHIVE", name: "robots"}
 = csrf_meta_tag
 = stylesheet_link_tag "rails_admin/rails_admin.css", media: :all
